--- a/basket.css
+++ b/basket.css
@@ -496,11 +496,13 @@ span.price {
 
   #deliveryBasketWprapper {    
     grid-template-columns:  0.1fr 1.2fr 2fr 1fr;
+    font-size: 0.8em;
         
   }
 
   #totalPriceInBasket {
     margin-top: 3em;
+    font-size: 0.7em;
     grid-template-columns:   0.4fr 0.7fr 0.8fr 1fr;
         
   }
