--- a/basket.css
+++ b/basket.css
@@ -372,6 +372,7 @@
 /** Formular*/
 
 .row {
+  width: 100%;
   display: -ms-flexbox; /* IE10 */
   display: flex;
   -ms-flex-wrap: wrap; /* IE10 */
@@ -458,12 +459,17 @@ span.price {
 /**Kontaktné údaje */
 
 #contactBasketWprapper {
-  width: 40%;
-  margin: 1em auto 5em auto;
+display: flex;
+flex-direction: column;
+justify-content: center;
+  width: 70%;
+  margin: auto;
+  
+  
 }
 
 .sendOrderButton {
-  margin: 2em auto auto auto;
+  margin: 2em auto 5em auto;
   width: 16em;
 }
 
@@ -507,7 +513,7 @@ span.price {
         
   }
 
-  input[type="text"] {   min-width: 200px;
+  input[type="text"] {   width: 100%;
    
   }
 
@@ -570,6 +576,12 @@ span.price {
 
       #contactAddress{
         display: none;
+      }
+
+      #contactBasketWprapper {
+
+        width: 90%;
+        
       }
 
 }
