--- a/basket.css
+++ b/basket.css
@@ -396,7 +396,7 @@
 
 .col-75 {
   -ms-flex: 75%; /* IE10 */
-  flex: 75%;
+  flex: 100%;
 }
 
 .col-25,
@@ -487,7 +487,8 @@ justify-items: auto;
 
 
   #basketWrapperGrid {
-    width: 98%;
+    width: 100%;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 100%, 0 100%);
   }
 
   #basketWrapperHeader {
