--- a/style.css
+++ b/style.css
@@ -491,6 +491,7 @@ footer #copy {
 
 /** Category Tree*/
 .navigation {
+  display: flex;
   z-index: 1;
   box-sizing: border-box;
   position: absolute;
@@ -688,7 +689,12 @@ footer #copy {
 
 @media only screen and (max-width: 1771px) {
 
-  
+  .navigation {
+    display: flex;
+    position: absolute;
+    
+    
+  }
 
   .productsWrapper {
     margin: 6.2em 5% 0 5%;
@@ -917,7 +923,7 @@ top: 6.8em;
       display: grid;
       grid-template-columns: 1fr;
       grid-gap: 0.5em;
-      margin: 0 1% 0 1%;
+      margin: 9.4em 1% 0 1%;
     }
 
     
