--- a/style.css
+++ b/style.css
@@ -9,6 +9,77 @@ body {
   background-size: cover;
 }
 
+#popup{
+  
+ position: absolute;
+ opacity: .5;
+ z-index: 2;
+width: 100%;
+height: 100%;
+background-color: #2c2d2d;
+
+}
+
+#popupWrapper{
+  width: 100%;
+height: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+#popupContent{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-end;
+  align-items: center;
+  width: 40%;
+  min-width: 350px;
+  height: 55%;
+  background-color: gold;
+  z-index: 5;
+  border-radius: 10px;
+}
+#popupContent img{
+ margin: 0;
+height: 57% ;
+}
+
+#p1{
+  font-size: 3em;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+#p2{
+  font-size: 2em;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#popupButton{
+  margin-top: 1em;
+width: 130px;
+height: 50px;
+font-size: 1.4em;
+font-weight: 700;
+color: white;
+
+border-radius: 5px;
+background-color:#89c403;
+border: none;
+}
+
+#popupButton:hover{
+background-color: #528009;
+  cursor: pointer;
+
+}
+
+
+
+
 #TopMenu {
   display: grid;
   grid-template-columns: auto auto;
