--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ width: 100%;
 height: 100%;
 background-color: #2c2d2d;
 
+
 }
 
 #popupWrapper{
@@ -46,7 +47,7 @@ height: 100%;
 }
 #popupContent img{
  margin: 0;
-height: 57% ;
+height: 55% ;
 }
 
 #p1{
@@ -54,12 +55,13 @@ height: 57% ;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 #p2{
+  margin: 0.5em;
   font-size: 2em;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #popupButton{
-  margin-top: 1em;
+  margin-top: 0.5em;
 width: 130px;
 height: 50px;
 font-size: 1.4em;
@@ -76,7 +78,16 @@ background-color: #528009;
   cursor: pointer;
 
 }
+#cancelPopup{
+transform: translateY(-1em);
+width: 40px;
+ margin-left: 104%;
+}
 
+#cancelPopup:hover{
+  cursor: pointer;
+  opacity: 0.8;
+  }
 
 
 
