--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ background-color: #2c2d2d;
 
 }
 
-#popupWrapper{
+#popupWindow{
   width: 100%;
 height: 100%;
   position: absolute;
@@ -78,11 +78,7 @@ background-color: #528009;
   cursor: pointer;
 
 }
-#cancelPopup{
-transform: translateY(-1em);
-width: 40px;
- margin-left: 104%;
-}
+
 
 #cancelPopup:hover{
   cursor: pointer;
