--- a/basket.css
+++ b/basket.css
@@ -489,6 +489,7 @@ justify-items: auto;
   #basketWrapperGrid {
     width: 100%;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 100%, 0 100%);
+    margin-top: 1em;
   }
 
   #basketWrapperHeader {
